# vsm-cpp-common

./: README.md
include/: adsb_device.h  adsb_device_processor.h  adsb_manager.h  adsb_processor.h  cpr_decoder.h  mavlink_vehicle.h  mavlink_vehicle_manager.h  micro_adsb_device.h  red_button_processor.h
src/: adsb_device.cpp  adsb_device_processor.cpp  adsb_manager.cpp  adsb_processor.cpp  cpr_decoder.cpp  mavlink_vehicle.cpp  mavlink_vehicle_manager.cpp  micro_adsb_device.cpp  red_button_processor.cpp
test/unit/: CMakeLists.txt  no_valgrind.txt  ut_adsb_frame.cpp  ut_adsb_processor.cpp  ut_cpr_decoder.cpp
test/unit/resources/: cpr_airborne_decode_test.txt  cpr_surface_decode_test.txt  gillham_altitude_codes.txt
